# setlistkit

./: .editorconfig  .gitignore  Makefile  README.md  pyproject.toml  slkit.example.toml
.github/: dependabot.yml
.github/workflows/: ci.yml
examples/packs/example/: README.md  aliases.json  classifiers.json  corpus.json  pack.json  protected.json  vocabulary.json
scripts/: songbook_parity.py
src/setlistkit/: __init__.py  config.py  diagnostics.py
src/setlistkit/catalog/: __init__.py  baserates.py  durations.py  features.py  funnel.py  jsonpos.py  lengths.py  lint.py  merge.py  normalizer.py  pack.py  parse.py  showtypes.py  songbook.py  tapemeasure.py  tracklists.py  window.py
src/setlistkit/cli/: __init__.py  common.py  derive.py  export.py  exportio.py  ingest.py  main.py
src/setlistkit/model/: __init__.py  backtest.py  scores.py
src/setlistkit/picks/: __init__.py
src/setlistkit/report/: __init__.py
src/setlistkit/sources/: __init__.py  archive_org.py  client.py  keyfile.py
src/setlistkit/store/: __init__.py  corpus.py  daterange.py  db.py  durations.py  migrations.py  raw_cache.py  recordings.py
tests/: conftest.py
tests/unit/: test_archive_org.py  test_backtest.py  test_baserates.py  test_catalog_songbook.py  test_cli.py  test_cli_derive.py  test_cli_export.py  test_cli_exportio.py  test_cli_ingest.py  test_cli_pull.py  test_cli_store.py  test_client.py  test_config.py  test_corpus_store.py  test_diagnostics.py  test_duration_tracks.py  test_durations.py  test_durations_store.py  test_exportio.py  test_features.py  test_funnel.py  test_jsonpos.py  test_keyfile.py  test_layer_boundaries.py  test_lengths.py  test_lint.py  test_merge.py  test_normalizer.py  test_pack.py  test_parse.py  test_raw_cache.py  test_recordings_store.py  test_rotation_parity.py  test_scores.py  test_showtypes.py  test_songbook_parity_script.py  test_store.py  test_store_migrations.py  test_tracklists.py  test_window.py
tests/unit/fixtures/: rotation_formula.js
tests/unit/golden/: songbook.json  tapemeasure.json
